# lab1

./: CMakeLists.txt  Гистограммы 1 лаба.docx
inc/: BonusDice.h  Dice.h  DoubleDice.h  PenaltyDice.h  Rollable.h  ThreeDicePool.h  value_probability.h
src/: BonusDice.cpp  Dice.cpp  DoubleDice.cpp  PenaltyDice.cpp  Rollable.cpp  ThreeDicePool.cpp  main.cpp
